--- a/beta/index.html
+++ b/beta/index.html
@@ -22,9 +22,9 @@
 
                         <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
 
-                        <li><a href='diff_renovate/actions-checkout-4.x.html'>Unified diff core:dev vs beta:origin/renovate/actions-checkout-4.x</a></li>
+                        <li><a href='diff_registry_clean.html'>Unified diff core:dev vs beta:origin/registry_clean</a></li>
 
-                        <li><a href='diff_renovate/astral-sh-ruff-pre-commit-0.x.html'>Unified diff core:dev vs beta:origin/renovate/astral-sh-ruff-pre-commit-0.x</a></li>
+                        <li><a href='diff_renovate/igorshubovych-markdownlint-cli-0.x.html'>Unified diff core:dev vs beta:origin/renovate/igorshubovych-markdownlint-cli-0.x</a></li>
 
                         <li><a href='diff_value_fn.html'>Unified diff core:dev vs beta:origin/value_fn</a></li>
 
