--- a/beta/index.html
+++ b/beta/index.html
@@ -18,13 +18,13 @@
 
                         <li><a href='diff_mixin.html'>Unified diff core:dev vs beta:origin/mixin</a></li>
 
+                        <li><a href='diff_mode_off.html'>Unified diff core:dev vs beta:origin/mode_off</a></li>
+
                         <li><a href='diff_new_sensor.html'>Unified diff core:dev vs beta:origin/new_sensor</a></li>
 
                         <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
 
                         <li><a href='diff_registry_clean.html'>Unified diff core:dev vs beta:origin/registry_clean</a></li>
-
-                        <li><a href='diff_renovate/igorshubovych-markdownlint-cli-0.x.html'>Unified diff core:dev vs beta:origin/renovate/igorshubovych-markdownlint-cli-0.x</a></li>
 
                         <li><a href='diff_value_fn.html'>Unified diff core:dev vs beta:origin/value_fn</a></li>
 
