--- a/beta/index.html
+++ b/beta/index.html
@@ -12,6 +12,8 @@
                 <p>Branch differences (still in beta)</p>
                 <ul>
 
+                        <li><a href='diff_improve-reg-clean.html'>Unified diff core:dev vs beta:origin/improve-reg-clean</a></li>
+
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
 
                         <li><a href='diff_migrate_max_dhw_temp.html'>Unified diff core:dev vs beta:origin/migrate_max_dhw_temp</a></li>
@@ -23,6 +25,10 @@
                         <li><a href='diff_new_sensor.html'>Unified diff core:dev vs beta:origin/new_sensor</a></li>
 
                         <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
+
+                        <li><a href='diff_renovate/asottile-pyupgrade-3.x.html'>Unified diff core:dev vs beta:origin/renovate/asottile-pyupgrade-3.x</a></li>
+
+                        <li><a href='diff_renovate/codespell-project-codespell-2.x.html'>Unified diff core:dev vs beta:origin/renovate/codespell-project-codespell-2.x</a></li>
 
                         <li><a href='diff_value_fn.html'>Unified diff core:dev vs beta:origin/value_fn</a></li>
 
